--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.datasource.password=test
 spring.jpa.show-sql=true
 Spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Auth0
+auth0.audience=htpps:/menu/api
+auth0.clientId=ewbYlH0m3nylH5eHIDE052tKwFw2khFh
+auth0.clientSecret=y1G3r8ZcGxRdAZC_s5HE_3kj-fgXTho6_zt9nJSawakxZ6BtQtOUa00aRwH1L3qZ
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-dmgxnb5p.us.auth0.com/
